--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Hi, I'm Blaž - young and enthusiastic self taugh developer who's eager do dive into a wonderful world of programming and web development.
+                Hi, I'm Blaž - young and enthusiastic self taugh developer who's eager to dive into a wonderful world of programming and web development.
               </p>
               <p class="about-wrapper__info-text">
                 I'm currently learning front end development, more specifically HTML5, CSS3, JavaScript and React.
@@ -92,7 +92,8 @@
                     As first JavaScript project I've created linear gradient generator, that you can use for your backgrounds.
                   </p>
                   <p class="mb-4">
-                    I've used event listeners so that JavaScript can modify linear-gradient properties on the go.
+                    For this project I've used basic HTML and CSS syntax and then set up event listeners so that JavaScript can 
+                    modify linear-gradient properties on the go.
                   </p>
                 </div>
                 <a
