Fix typo in about section

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Hi, I'm Blaž - young and enthusiastic self taugh developer who's eager to dive into a wonderful world of programming and web development.
+                Hi, I'm Blaž - young and enthusiastic self taught developer who's eager to dive into a wonderful world of programming and web development.
               </p>
               <p class="about-wrapper__info-text">
                 I'm currently learning front end development, more specifically HTML5, CSS3, JavaScript and React.
