--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/svg" href="assets/favicon.svg" />
 
     <!-- Todo: put here your site title -->
-    <title>Blaž Bočko | Developer</title>
+    <title>Blaž Bočko</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="Blaž Bočko, bbocko, developer, react" />
     <!-- Todo: improve your SEO by adding a small description of you -->
